--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -142,7 +142,7 @@ button#homepagebutton {
   margin-bottom: 15px;
 }
 .home-page_block4 {
-  height: 100%;
+  height: 800px;
   position: relative;
 }
 .home-page_block4 .bg-img {
